--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -200,6 +200,13 @@
   .clean-list li {
     @apply block;
   }
+
+  figure {
+    img {
+      @apply l-box
+      mb-clus3lev;
+    }
+  }
 }
 @layer components {
   .grid-wrap {
@@ -207,6 +214,37 @@
       grid-cols-1
       grid-rows-1
       min-h-dvh;
+  }
+
+  .breadcrumb {
+    ol {
+      @apply flex flex-wrap;
+
+      > * {
+        @apply mr-2;
+      }
+
+      li {
+        @apply flex
+        items-center
+        font-bold;
+        &:after {
+          @apply content-['']
+          w-1
+          h-1
+          bg-current
+          block
+          ml-2;
+        }
+
+        &:last-child {
+          @apply font-normal;
+          &:after {
+            @apply content-none;
+          }
+        }
+      }
+    }
   }
 
   .l-box {
