--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -45,17 +45,17 @@
 
   /* Styles needed for a sticky footer */
 
-  main,
+  /* main,
   #main {
     @apply box-content
       mx-auto
-      pt-0
+      pt-6
       pb-12;
   }
 
   #main .component + .component {
     @apply mt-20 md:mt-28;
-  }
+  } */
 
   h1,
   h2,
