--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -45,7 +45,7 @@
 
   /* Styles needed for a sticky footer */
 
-  /* main,
+  main,
   #main {
     @apply box-content
       mx-auto
@@ -55,7 +55,7 @@
 
   #main .component + .component {
     @apply mt-20 md:mt-28;
-  } */
+  }
 
   h1,
   h2,
