--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -373,59 +373,6 @@
   }
 
   /*------------------------------------*\
-    #Hero component
-\*------------------------------------*/
-
-  .hero {
-    @apply lg:pt-10;
-  }
-
-  .hero--after {
-    &:after {
-      @apply content-['']
-        w-2
-        h-2
-        rounded-full
-        block
-        mx-auto
-        mt-6
-        md:my-10
-        bg-current;
-    }
-  }
-
-  .hero .l-sidebar > *,
-  .hero .l-sidebar > * > * {
-    @apply m-0;
-  }
-
-  .hero .l-sidebar .sidebar {
-    @apply basis-96;
-  }
-
-  .hero .l-sidebar .not-sidebar {
-    @apply pb-8
-    mx-auto
-    lg:max-w-5xl;
-  }
-
-  .hero .lead {
-    @apply mb-6
-    mt-0
-    font-semibold;
-  }
-
-  .hero h1,
-  .hero h2 {
-    @apply mb-6;
-  }
-
-  .hero + * {
-    @apply mt-8
-    lg:mt-14;
-  }
-
-  /*------------------------------------*\
     #Cards
 \*------------------------------------*/
 
@@ -653,7 +600,8 @@
   }
 
   .cta {
-    @apply font-semibold
+    @apply inline-flex
+    font-semibold
     px-6
     py-4
     outline
@@ -673,7 +621,8 @@
   }
 
   .cta-invert {
-    @apply font-semibold
+    @apply inline-flex
+    font-semibold
     px-6
     py-4
     outline
