--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,7 +9,7 @@
     fill-firstlight
     dark:bg-secondark    
     dark:text-firstdark    
-    dark:fill-firstdark;
+    dark:fill-secondark;
   }
 
   ::selection {
@@ -53,7 +53,6 @@
   #main {
     @apply box-content
       mx-auto
-      pt-6
       pb-12;
   }
 
@@ -550,7 +549,11 @@
     text-center;
   }
 
-  .lead {
+  .main-content {
+    @apply relative 
+    z-30
+    bg-white
+    dark:bg-secondark;
   }
 
   .subtitle {
