--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -485,7 +485,9 @@
           outline-firstlight
           dark:outline-firstdark
           md:w-20
-          md:h-20;
+          md:h-20
+          lg:w-24
+          lg:h-24;
         }
 
         .image {
